test/e2e/manifests/agentinstalladmission/agentinstalladmission-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: assisted-installer
  name: agentinstalladmission
spec:
  type: ClusterIP
  selector:
    app: agentinstalladmission
  ports:
  - name: agentinstalladmission
    port: 443
    targetPort: 9443
    protocol: TCP
