test/e2e/manifests/agentinstalladmission/kustomization.yaml
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization
namespace: assisted-installer
resources:
  - ./rbac
  - agentinstalladmission-certificate.yaml
  - agentinstalladmission-deployment.yaml
  - agentinstalladmission-service.yaml
  - agentinstalladmission-webhooks.yaml
  - agentinstalladmission-apiservice.yaml
images:
- name: quay.io/edge-infrastructure/assisted-service
  newTag: ocm-2.10
